fix burger menu alignment with basket icon

--- a/wp-content/themes/archibald/assets/css/style.css
+++ b/wp-content/themes/archibald/assets/css/style.css
@@ -1048,7 +1048,7 @@ footer {
       justify-content: center;
       align-items: center;
       width: 80px;
-      height: 80px;
+      height: 100%;
       cursor: pointer;
       transition: all .5s ease-in-out;
     }
